* ie11 overflow fixes for Card. * fixing missing flex-basis: auto for IE11 (1/3 basis Box option)

--- a/src/scss/grommet-core/_objects.box.scss
+++ b/src/scss/grommet-core/_objects.box.scss
@@ -4,6 +4,10 @@
   &.#{$grommet-namespace}box--pad-between-thirds {
     > .#{$grommet-namespace}box--basis-1-3 {
       flex-basis: calc(33.33% - #{$pad-space * (2/3)});
+
+      @include media-query (palm) {
+        flex-basis: auto;
+      }
     }
   }
 
